--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@vercel/blob": "^1.1.1",
+    "clsx": "^2.1.1",
+    "multiparty": "^4.2.3",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
