--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@types/lodash": "^4.17.17",
     "@vercel/blob": "^1.1.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "multiparty": "^4.2.3",
     "next": "^14.0.4",
     "react": "18.2.0",
