--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
