--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "uuid": "^11.1.0",
